# Skyline2IsoCor

./: README.md  pyproject.toml
skyline2isocor/: cli.py
skyline2isocor/test-data/: skyline_output.csv
