[tool.poetry]
name = "skyline2isocor"
version = "0.1.0"
description = "Convert skyline output to IsoCor input format"
authors = ["legregam <legregam@insa-toulouse.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
